css/styles.css
/* --------------- Global styles --------------- */

header {
  background-image: linear-gradient(#757c82, #dce7f3);
  position: fixed;
  width: 100%;
  z-index: 10;
}

.logo {
  width: 90px;
  margin-top: 5px;
}

body {
  margin: 0px;
  font-family: "Alegreya Sans", sans-serif;
  font-size: 16px;
  text-align: center;
  color: #fff;
}

h1,
h2 {
  font-family: "Alegreya", serif;
  font-size: 36px;
  color: #fff;
}

.button {
  background-color: #ff5e00;
  padding: 5px 35px;
  border-radius: 50px;
  color: #fff;
  font-family: "Alegreya", serif;
  text-transform: uppercase;
  text-decoration: none;
  font-weight: 700;
  font-size: 22px;
}

ul {
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  padding-left: 0px;
  margin: 0px;
}

li {
  padding: 10px;
}
.navbar-desktop {
  position: fixed;
  top: 0px;
  z-index: 10;
  display: flex;
  justify-content: space-around;
  width: 100%;
  display: none;
}

.navbar-desktop ul {
  background-image: linear-gradient(#757c82, #dce7f3);
  flex: auto;
}
.links {
  align-items: center;
  justify-content: flex-end;
}
.links li a {
  color: #0a3641;
}

.margin {
  margin-right: 15px;
}

.navbar-desktop a {
  color: #fff;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 24px;
}

.navbar-desktop li {
  padding: 5px;
}
.navbar {
  position: fixed;
  min-width: 100%;
  bottom: 0px;
  z-index: 10;
}

.navbar ul {
  background-image: linear-gradient(#0a3641, #07262d);
}

.navbar a {
  color: #fff;
  text-decoration: none;
  display: block;
  font-weight: 400;
}

.navbar i {
  display: block;
}

footer {
  z-index: 10;
  /*display: inline-flex;
  justify-content: space-around;*/
  display: none;
}

/* --------------- Home page --------------- */
.content {
  display: flex;
  flex-direction: column;
  position: relative;
  z-index: 9;
}

.content h1,
.content h2,
.content p {
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(10px);
  display: inline-block;
  width: 100%;
  text-align: center;
}

.content h1,
.content h2 {
  padding-top: 10px;
  margin-bottom: 0px;
}
.content p {
  margin-top: 0px;
  padding-bottom: 10px;
}

.main {
  background-image: url(../images/homepage/main-picture.jpg);
  min-height: 100vh;
  background-size: cover;
  background-position: center right;
  padding-top: 40px;
}

.text {
  position: absolute;
  top: 50%;
  /*padding: 20px;
  text-align: center;*/
}

.textwomen {
  position: absolute;
  top: 25%;
  /*padding: 20px;
  text-align: center;*/
}

.textmen {
  position: absolute;
  top: 75%;
  /*padding: 20px;
  text-align: center;*/
}
.textabout {
  position: absolute;
  top: 25%;
  /*padding: 20px;
  text-align: center;*/
}

.main div {
  margin-top: 40px;
}
.women {
  background-image: url(../images/homepage/women-jackets.jpg);
  min-height: 50vh;
  background-size: cover;
  background-position: bottom;
  padding-top: 40px;
}

.men {
  background-image: url(../images/homepage/men-jackets.jpg);
  min-height: 50vh;
  background-size: cover;
  background-position: bottom;
  padding-top: 40px;
}

.about {
  background-image: url(../images/homepage/about-us.jpg);
  background-position: center;
  min-height: 50vh;
  padding-top: 40px;
}

/* --------------- Media queries --------------- */

@media only screen and (min-width: 695px) {
  body {
    font-size: 22px;
  }
  .navbar {
    display: none;
  }
  footer {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    min-width: 100%;
    background-image: linear-gradient(#0a3641, #00151b);
  }

  footer ul {
    display: block;
  }

  footer h4,
  footer h5 {
    margin-left: 10px;
    text-transform: uppercase;
    margin-top: 10px;
    margin-bottom: 10px;
    font-weight: 400;
    font-size: 24px;
    text-decoration: underline;
  }

  .footer-info a {
    color: #fff;
    text-decoration: none;
  }

  .footer-info li {
    list-style-type: none;
    padding: 0px 15px;
  }

  .contact {
    text-align: left;
  }

  .contact i {
    padding-right: 15px;
  }
  .social-media {
    margin-right: 10px;
  }
  .social-media-icons {
    display: inline-flex;
    justify-content: flex-end;
    min-width: 100%;
  }

  .social-media-icons li {
    padding: 0px 15px;
  }

  header {
    display: none;
  }
  .navbar-desktop {
    display: flex;
  }

  .content {
    display: flex;
    flex-direction: row;
  }

  .main,
  .about {
    width: 100%;
  }

  .women,
  .men {
    width: 50%;
    background-position: center;
  }

  .textwomen,
  .textmen {
    top: 25%;
    max-width: 50%;
    text-align: center;
  }
}

@media only screen and (min-width: 950px) {
  .content h1,
  .content h2,
  .content p {
    width: 100%;
    margin-left: 40%;
    text-align: left;
    padding-left: 10px;
  }

  .text,
  .textabout {
    max-width: 40%;
    left: 40%;
  }

  .textabout {
    top: 15%;
  }
}

